--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@mui/material": "^5.13.2",
     "@mui/x-data-grid": "^6.5.0",
     "autoprefixer": "10.4.14",
-    "bcrypt": "^5.1.0",
-    "next": "^13.4.4",
+    "jwt-decode": "^3.1.2",
+    "next": "^13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.32.1"
   }
 }
